--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,15 +7,17 @@
   --foreground: #171717;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+ol,
+li {
+  margin-right: 30px;
+  justify-content: center;
+  gap: 10px;
+  display: flex;
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+button {
+  color: white;
+  background-color: #171717;
+  height: 40px;
+  width: 100px;
 }
