--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,17 +7,24 @@
   --foreground: #171717;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 ol,
 li {
+  margin-top: 10px;
+  font-size: 20px;
   margin-right: 30px;
   justify-content: center;
-  gap: 10px;
+  gap: 30px;
   display: flex;
 }
 
 button {
+  border-radius: 10px;
   color: white;
-  background-color: #171717;
+  background-color: blue;
   height: 40px;
-  width: 100px;
+  width: 160px;
 }
